# smite

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  cmake_common.txt  conanfile.txt  format-docker.sh  format.sh  packages.txt  packages_macos.txt
cmd/noird/: CMakeLists.txt  main.cpp
cmd/smite/: CMakeLists.txt  app.cpp  main.cpp
cmd/smite/commands/: command.cpp  commands.h  lib.cpp  run_node.cpp  version.cpp
libs/: CMakeLists.txt
libs/chain_kv/: CMakeLists.txt
libs/chain_kv/unit_tests/: CMakeLists.txt  shared_bytes_tests.cpp
libs/cmake/: CachedLibs.cmake  Findsodium.cmake  XKCP.cmake  b2.cmake  rocksdb.cmake
libs/include/: endian.h
libs/tendermint/: CMakeLists.txt  abci.c  app.go  config.go  go.mod  go.sum  init.go  log.go  main.go  node.go
libs/tendermint/tendermint/: abci.h
proto/: CMakeLists.txt
proto/gogoproto/: gogo.pb.cc  gogo.pb.h
proto/noir/: ProtoNoir.cmake
proto/tendermint/abci/: types.pb.cc  types.pb.h
proto/tendermint/blockchain/: types.pb.cc  types.pb.h
proto/tendermint/consensus/: types.pb.cc  types.pb.h  wal.pb.cc  wal.pb.h
proto/tendermint/crypto/: keys.pb.cc  keys.pb.h  proof.pb.cc  proof.pb.h
proto/tendermint/mempool/: types.pb.cc  types.pb.h
proto/tendermint/p2p/: conn.pb.cc  conn.pb.h  pex.pb.cc  pex.pb.h  types.pb.cc  types.pb.h
proto/tendermint/privval/: types.pb.cc  types.pb.h
proto/tendermint/state/: types.pb.cc  types.pb.h
proto/tendermint/statesync/: types.pb.cc  types.pb.h
proto/tendermint/store/: types.pb.cc  types.pb.h
proto/tendermint/types/: block.pb.cc  block.pb.h  canonical.pb.cc  canonical.pb.h  events.pb.cc  events.pb.h  evidence.pb.cc  evidence.pb.h  params.pb.cc  params.pb.h  types.pb.cc  types.pb.h  validator.pb.cc  validator.pb.h
proto/tendermint/version/: types.pb.cc  types.pb.h
src/: CMakeLists.txt
src/CLI/: CLI11.hpp
src/eo/: .clang-format  CMakeLists.txt  select.h  time.h
src/eth/: CMakeLists.txt
src/eth/common/: CMakeLists.txt  block.h  bloom.h  log.h  receipt.h  transaction.h  types.h  types_test.cpp
src/eth/rpc/: CMakeLists.txt  api.cpp  api.h  api_test.cpp  rpc.cpp  rpc.h  rpc_test.cpp  tx.h
src/noir/: CMakeLists.txt
src/noir/app/: CMakeLists.txt  app.cpp  app.h
src/noir/app_sm/: CMakeLists.txt  app_sm.cpp  app_sm.h
src/noir/application/: CMakeLists.txt  app.h  noop_app.h  socket_app.cpp  socket_app.h
src/noir/clist/: CMakeLists.txt  clist.cpp  clist.h
src/noir/codec/: CMakeLists.txt  basic_datastream.h  bcs.h  datastream.h  errors.cpp  orderedcode.h  proto3.h  protobuf.h  rlp.h  rlp_test.cpp  scale.h  scale_test.cpp
src/noir/common/: CMakeLists.txt  backtrace.h  base64.h  binary.h  bit.h  buffered_writer.h  bytes.h  bytes_view.h  check.h  cli_helper.cpp  concepts.h  expected.h  for_each.h  hex.cpp  hex.h  inttypes.h  log.cpp  log.h  mem_clr.cpp  mem_clr.h  overloaded.h  plugin_interface.h  pow.h  proto_readwrite.h  refl.h  scope_exit.h  str_const.h  string.h  thread_pool.cpp  thread_pool.h  throttle_timer.h  ticker.h  time.cpp  time.h  timer.h  type_traits.h  types.cpp  types.h  types_test.cpp  unordered_map.h  (+1 more)
src/noir/config/: CMakeLists.txt  base.h  config.h  consensus.h  defaults.cpp  defaults.h  mempool.cpp  mempool.h  privval.h  tx_index.h
src/noir/consensus/: CMakeLists.txt  abci.h  abci_types.h  account.hpp  app_connection.cpp  app_connection.h  bit_array.h  bit_array_test.cpp  block.cpp  block.h  block_executor.h  block_executor_test.cpp  block_meta.h  block_test.cpp  common.h  common_test.h  config.h  consensus_reactor.cpp  consensus_reactor.h  consensus_state.cpp  consensus_state.h  consensus_state_test.cpp  consensus_types.h  crypto.cpp  crypto.h  event_bus.h  name.hpp  node.cpp  node.h  node_id.h  node_key.h  node_setup.h  params.h  peer_state.h  priv_validator.cpp  priv_validator.h  protocol.h  replay.cpp  replay_test.cpp  round_state.h  (+16 more)
src/noir/core/: CMakeLists.txt  basic_errors.cpp  basic_errors.h  channel.h  codec.h  core.h  error.h  result.h  types.h
src/noir/crypto/: CMakeLists.txt  blake2.cpp  crypto_test.cpp  hash.h  keccak.cpp  openssl.cpp  openssl.h  rand.cpp  rand.h  ripemd.cpp  sha2.cpp  sha3.cpp  xxhash.cpp
src/noir/db/: chain_kv.h  chain_kv.hpp  rocks_session.h  rocks_session.hpp  session.h  session.hpp  session_variant.h  session_variant.hpp  shared_bytes.h  shared_bytes.hpp  undo_stack.h  undo_stack.hpp
src/noir/eth/: CMakeLists.txt
src/noir/jmt/: CMakeLists.txt  constants.cpp  jmt.h  jmt_test.cpp  mock_tree_store.h  types.cpp  types.h
src/noir/log/: CMakeLists.txt  config.cpp  config.h  log.h
src/noir/mempool/: CMakeLists.txt  cache.cpp  cache.h  ids.cpp  ids.h  mempool.h  priority_queue.cpp  priority_queue.h  tx.cpp  tx.h
src/noir/net/: CMakeLists.txt  buffer_factory.h  conn.h  main.cpp  net_plugin.cpp  net_plugin.h  protocol.h  queued_buffer.h  tcp_conn.h  tcp_listener.h  thread_util.h  types.h
src/noir/p2p/: CMakeLists.txt  buffer_factory.h  message_buffer.h  p2p.cpp  p2p.h  p2p_test.cpp  protocol.h  queued_buffer.h  types.h
src/noir/rpc/: CMakeLists.txt  jsonrpc.cpp  jsonrpc.h  local_endpoint.h  resource.h  rpc.cpp  rpc.h
src/noir/tendermint/: CMakeLists.txt  abci.cpp  config.cpp  config.h  log.cpp  log.h  node.cpp  node.h  tendermint.cpp  tendermint.h
src/noir/thread/: CMakeLists.txt  thread_name.cpp  thread_name.h
src/noir/tx_pool/: CMakeLists.txt  LRU_cache.h  tx_pool.cpp  tx_pool.h  tx_pool_test.cpp  unapplied_tx_queue.h  unapplied_tx_queue.hpp
src/tendermint/: CMakeLists.txt
src/tendermint/abci/: CMakeLists.txt
src/tendermint/common/: CMakeLists.txt  bitarray.h  common.h  lib.cpp  thread_utils.cpp  thread_utils.h  types.h
src/tendermint/log/: CMakeLists.txt  config.cpp  config.h  log.h  setup.cpp
src/tendermint/net/: CMakeLists.txt  config.h  conn.cpp  conn.h  tcp_conn.h
src/tendermint/node/: CMakeLists.txt  node.cpp  node.h  plugin.cpp  plugin.h
src/tendermint/p2p/: CMakeLists.txt  address.h  channel.cpp  channel.h  lib.cpp  peermanager.h  queue.h  router.cpp  router.h  transport_mconn.cpp  transport_mconn.h  types.h  waker.h
v1/noir/common/: bytes.h  (+27 more)
(+409 files in other folders)
