add_subdirectory(clist)
add_subdirectory(codec)
add_subdirectory(config)
add_subdirectory(common)
add_subdirectory(consensus)
add_subdirectory(core)
add_subdirectory(crypto)
add_subdirectory(db)
add_subdirectory(jmt)
add_subdirectory(log)
add_subdirectory(mempool)
add_subdirectory(net)
add_subdirectory(p2p)
#add_subdirectory(rpc)
add_subdirectory(thread)
#add_subdirectory(eth)
#add_subdirectory(tendermint)
